tests/baselines/reference/modularizeLibrary_ErrorFromUsingES6ArrayWithOnlyES6ArrayLib.errors.txt
error TS2318: Cannot find global type 'Boolean'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Number'.
tests/cases/compiler/modularizeLibrary_ErrorFromUsingES6ArrayWithOnlyES6ArrayLib.ts(4,12): error TS2691: Cannot find name 'Array'. A type exists with this name, but no value.


!!! error TS2318: Cannot find global type 'Boolean'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Number'.
==== tests/cases/compiler/modularizeLibrary_ErrorFromUsingES6ArrayWithOnlyES6ArrayLib.ts (1 errors) ====
    
    // Error missing basic JavaScript objects
    function f(x: number, y: number, z: number) {
        return Array.from(arguments);
               ~~~~~
!!! error TS2691: Cannot find name 'Array'. A type exists with this name, but no value.
    }
    
    f(1, 2, 3);
    